# shwifty

./: CHANGELOG.md  LICENSE  README.md  schwifty.cabal  shwifty.cabal
src/: Schwifty.hs  Shwifty.hs  Test.hs
src/Shwifty/: Class.hs  Codec.hs  Pretty.hs  Types.hs
